CRUD operations on Customer

--- a/CodeFirstDemoWithAnnotations/appsettings.json
+++ b/CodeFirstDemoWithAnnotations/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodeFirstDemoWithAnnotationsContext": "Server=(localdb)\\mssqllocaldb;Database=CodeFirstDemoWithAnnotationsContext-f7ad1ed5-6138-4f9f-bc8c-5c00cd7a9bd9;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
